--- a/demo/demo.css
+++ b/demo/demo.css
@@ -204,7 +204,7 @@ pre.prettyprint code {
   box-shadow: 0 0 0 1px var(--color-crimson);
 }
 
-#identify-form {
+form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
